# modelica-tankless-boiler

./: .gitignore  Makefile  README.md  plot_results.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: security-scan.yml
TanklessBoilers/: HighLimitController.mo  MinimumRunTimeController.mo  ModulationController.mo  README.md  SetpointController.mo  TanklessBoiler.mo  package.mo
TanklessBoilers/Examples/: PrimarySecondaryBoilerTest.mo  SimpleBoilerTest.mo  package.mo  plot_simple_boiler.py
scripts/: pre-commit
