[project]
name = "modelica-tankless-boiler"
version = "0.1.0"
description = "Modelica models for tankless boiler systems with primary/secondary loops"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dymat>=0.7",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

